--- a/css/style.css
+++ b/css/style.css
@@ -155,3 +155,25 @@ a {
         padding-left: 0rem;   
     }
 }
+
+
+/* Icons */
+.icon {
+    width: 40px;
+    height: 40px;
+}
+
+.icon--primary {
+    fill: var(--color-primary);
+}
+
+.icon-container {
+    background: #f3f9f8;
+    /* Icons are always the same size whether it is on mobile or desktop */
+    width: 64px; 
+    height: 64px;
+    border-radius: 100%;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+}
