--- a/components/icons.html
+++ b/components/icons.html
@@ -1,4 +1,5 @@
 <span class="icon-container">
-</svg><svg class="icon icon--primary">
-  <use xlink:href="images/sprite.svg#quotes"></use>
+  <svg class="icon icon--primary">
+    <use xlink:href="images/sprite.svg#wordpress"></use>
+  </svg>
 </span>
