Add testimonial component

--- a/css/style.css
+++ b/css/style.css
@@ -176,6 +176,15 @@ a {
     fill: var(--color-primary);
 }
 
+.icon--white {
+    fill: #fff;
+}
+
+.icon--small {
+    width: 30px;
+    height: 30px;
+}
+
 .icon-container {
     background: #f3f9f8;
     /* Icons are always the same size whether it is on mobile or desktop */
@@ -187,6 +196,9 @@ a {
     align-items: center;
 }
 
+.icon-container--accent {
+    background: var(--color-accent);
+}
 
 /* Buttons */
 .btn {
@@ -467,5 +479,35 @@ a {
 @media screen and (min-width: 1024px) {
     .grid--1x3 {
         grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+
+/* Testimonial */
+.testimonial {
+    padding: 3rem;
+}
+
+.testimonial__image {
+    position: relative;
+}
+
+.testimonial__image > img {
+    width: 100%;
+}
+
+.testimonial__image > .icon-container {
+    position: absolute;
+    top: 3rem;
+    right: -32px;
+}
+
+@media screen and (min-width: 768px) {
+    .testimonial .quote,
+    .testimonial .quote__author{
+        font-size: 2.4rem;
+    }
+    .testimonial .quote {
+        margin-left: 6rem;
     }
 }
