--- a/css/style.css
+++ b/css/style.css
@@ -594,3 +594,46 @@ a {
     max-height: 100vh;
     opacity: 1;
 }
+
+
+
+/* Blocks */
+.block {
+    /* This local variable is available to all its children */
+    --padding-vertical: 6rem;
+    padding: var(--padding-vertical) 2rem;
+    /* border: 2px solid red; */
+}
+
+.block__header {
+    text-align: center;
+}
+
+.block__heading {
+    margin-top: 0;
+}
+
+.block--dark {
+    background: black;
+    color: #7b858b;
+}
+
+.block--dark .block__heading {
+    color: white;   
+}
+
+.block--skewed-right {
+    padding-bottom: calc(4rem + var(--padding-vertical));
+    clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 80%);
+}
+
+.block--skewed-left {
+    padding-bottom: calc(4rem + var(--padding-vertical));
+    clip-path: polygon(0% 0%, 100% 0%, 100% 80%, 0% 100%);
+}
+
+
+.container {
+    max-width: 1140px;
+    margin: 0 auto;
+}
