--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,11 @@
   box-sizing: border-box;
 }
 
+::selection {
+    background: var(--color-primary);
+    color: white;
+}
+
 /* Typography */
 html {
   /* 62.5% of 16px -> 10px */
@@ -50,6 +55,7 @@ h2 {
 
 h3 {
   font-size: 3rem;
+  font-weight: 500;
 }
 
 p {
@@ -141,17 +147,17 @@ a {
 .list {
   list-style: none;
   padding-left: 0;
-  color: var(--color-headings);
 }
 
 .list--inline .list__item {
-  display: inline-block;
-  margin-right: 2rem;
+    display: inline-block;
+    margin-right: 2rem;
 }
 
 .list--tick {
-  list-style-image: url(../images/tick.svg);
-  padding-left: 3rem;
+    list-style-image: url(../images/tick.svg);
+    padding-left: 3rem;
+    color: var(--color-headings);
 }
 
 .list--tick .list__item {
@@ -424,6 +430,7 @@ a {
 /* Media */
 .media {
   display: flex;
+  margin-bottom: 4rem;
 }
 
 .media__title {
@@ -630,18 +637,20 @@ a {
   color: #7b858b;
 }
 
-.block--dark .block__heading {
+.block--dark h1, 
+.block--dark h2, 
+.block--dark h3 {
   color: white;
 }
 
 .block--skewed-right {
   padding-bottom: calc(4rem + var(--padding-vertical));
-  clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 80%);
+  clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 90%);
 }
 
 .block--skewed-left {
   padding-bottom: calc(4rem + var(--padding-vertical));
-  clip-path: polygon(0% 0%, 100% 0%, 100% 80%, 0% 100%);
+  clip-path: polygon(0% 0%, 100% 0%, 100% 90%, 0% 100%);
 }
 
 .container {
@@ -714,9 +723,6 @@ a {
 }
 
 /* Hero */
-.hero {
-  clip-path: polygon(0% 0%, 100% 0%, 100% 90%, 0% 100%);
-}
 
 .hero__tagline {
   font-size: 2rem;
@@ -804,3 +810,22 @@ a {
     }
 }
 
+
+/* Showcase */
+.block-showcase__image > img {
+    width: 100%;
+}
+
+@media screen and (min-width: 768px) {
+    .block-showcase .grid {
+        grid-template-columns: 50% 50%;
+    }
+    .block-showcase__image {
+        justify-self: end;
+    }
+    
+    .block-showcase__image > img {        
+        width: auto;
+        max-width: 700px;
+    }
+}
